# epanet-dev

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  annotated.html  class_age_model-members.html  class_age_model.html  class_c_m___head_loss_model-members.html  class_c_m___head_loss_model.html  class_chem_model-members.html  class_chem_model.html  class_constrained_demand_model-members.html  class_constrained_demand_model.html  class_control-members.html  class_control.html  class_control_parser-members.html  class_control_parser.html  class_curve-members.html  class_curve.html  class_curve_parser-members.html  class_curve_parser.html  class_d_w___head_loss_model-members.html  class_d_w___head_loss_model.html  class_demand-members.html  class_demand.html  class_demand_model-members.html  class_demand_model.html  class_e_nerror-members.html  class_e_nerror.html  class_element-members.html  class_element.html  class_emitter-members.html  class_emitter.html  class_epanet_1_1_project-members.html  class_epanet_1_1_project.html  class_favad_leakage_model-members.html  class_favad_leakage_model.html  class_file_error-members.html  class_file_error.html  (+285 more)
doc/: Differences From EPANET2.md  Doxyfile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+88 more)
src/: CMakeLists.txt  epanet3.h
src/CLI/: main.cpp
src/Core/: constants.h  datamanager.cpp  datamanager.h  diagnostics.cpp  diagnostics.h  epanet3.cpp  error.cpp  error.h  hydbalance.cpp  hydbalance.h  hydengine.cpp  hydengine.h  network.cpp  network.h  options.cpp  options.h  project.cpp  project.h  qualbalance.cpp  qualbalance.h  qualengine.cpp  qualengine.h  units.cpp  units.h
src/Elements/: control.cpp  control.h  curve.cpp  curve.h  demand.cpp  demand.h  element.cpp  element.h  emitter.cpp  emitter.h  junction.cpp  junction.h  link.cpp  link.h  node.cpp  node.h  pattern.cpp  pattern.h  pipe.cpp  pipe.h  pump.cpp  pump.h  pumpcurve.cpp  pumpcurve.h  qualsource.cpp  qualsource.h  reservoir.cpp  reservoir.h  tank.cpp  tank.h  valve.cpp  valve.h
src/Input/: controlparser.cpp  controlparser.h  curveparser.cpp  curveparser.h  inputparser.cpp  inputparser.h  inputreader.cpp  inputreader.h  linkparser.cpp  linkparser.h  nodeparser.cpp  nodeparser.h  optionparser.cpp  optionparser.h  patternparser.cpp  patternparser.h
src/Models/: demandmodel.cpp  demandmodel.h  headlossmodel.cpp  headlossmodel.h  leakagemodel.cpp  leakagemodel.h  pumpenergy.cpp  pumpenergy.h  qualmodel.cpp  qualmodel.h  tankmixmodel.cpp  tankmixmodel.h
src/Output/: outputfile.cpp  outputfile.h  projectwriter.cpp  projectwriter.h  reportfields.cpp  reportfields.h  reportwriter.cpp  reportwriter.h
src/Solvers/: ggasolver.cpp  ggasolver.h  hydsolver.cpp  hydsolver.h  ltdsolver.cpp  ltdsolver.h  matrixsolver.cpp  matrixsolver.h  qualsolver.cpp  qualsolver.h  rwcggasolver.cpp  rwcggasolver.h  sparspak.cpp  sparspak.h  sparspaksolver.cpp  sparspaksolver.h
src/Utilities/: graph.cpp  graph.h  hashtable.cpp  hashtable.h  mempool.cpp  mempool.h  segpool.cpp  segpool.h  utilities.cpp  utilities.h
test/: CMakeLists.txt
test/src/Elements/: test_pipe.cpp
